# PlatformClient

./: mkdocs.yml  pyproject.toml
PlatformClient/: __init__.py  client.py  format_access.py  query_builder.py  utils.py
PlatformClient/models/: api.py  branch.py  member_content.py
src/PlatformClient/: cli.py  client.py  format_access.py  types.py  utils.py
src/PlatformClient/models/: _default.py  api.py  board.py  branch.py  company.py  course.py  direction.py  group.py  group_schedule.py  lead.py  lesson.py  manager.py  member_content.py  role.py  tag.py  teacher.py
src/PlatformClient/models/boards/: board.py  sprint.py  task.py
tests/: CompanyBranchBoard.py  CompanyBranchGroup.py  CompanyBranchLead.py  CompanyBranchManager.py  CompanyBranchMemberContent.py  CompanyBranchRole.py  CompanyBranchTeacher.py  creds.py
tests/CompanyBranchAPI/: create.py  edit_and_get_details.py  edit_and_get_details_2.py  get_details.py  get_list.py  remove.py  variables.py
