[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "PlatformClient"
authors = [
    { name = "Kyrylo Bitsay", email = "bitsay.kyrylo@proton.me" }
]
version = "0.1.0"
description = "Leeearn.ai API Wrapper Client"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

# опціонально: створюємо CLI команду `mycool`
[project.scripts]
mycool = "PlatformClient.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/PlatformClient"]
